added older projects

--- a/index.html
+++ b/index.html
@@ -325,7 +325,12 @@
               code to make it functional with our proprietary order management
               software.
             </div>
-            <a href="https://subscription.texasmonthly.com/servlet/OrdersGateway?cds_mag_code=TXP&cds_page_id=261743" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Live Link</a>
+            <a
+              href="https://subscription.texasmonthly.com/servlet/OrdersGateway?cds_mag_code=TXP&cds_page_id=261743"
+              class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank"
+              >Live Link</a
+            >
           </div>
         </div>
 
@@ -342,16 +347,121 @@
             <h3 class="projects__row-content-title">Wine Spectator</h3>
 
             <div class="projects__row-content-desc">
-              The design for Wine Spectator was provided to me in a Figma file. I
-              converted it to HTML, CSS, and jQuery. I also added the necessary
-              code to make it functional with our proprietary order management
-              software.
+              The design for Wine Spectator was provided to me in a Figma file.
+              I converted it to HTML, CSS, and jQuery. I also added the
+              necessary code to make it functional with our proprietary order
+              management software.
             </div>
-            <a href="https://www.winespectator.com/subscribe" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Live Link</a>
+            <a
+              href="https://www.winespectator.com/subscribe"
+              class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank"
+              >Live Link</a
+            >
           </div>
         </div>
       </div>
     </section>
+    <!-- END FROM CDS GLOBAL -->
+
+    <!-- PROJECTS NO LONGER ACTIVE -->
+    <section class="sec-pad">
+      <div class="main-container">
+        <h2 class="heading heading-sec heading-sec__mb-bg">
+          <span class="heading-sec__main"
+            >Projects that are no longer active</span
+          >
+          <span class="heading-sec__sub">
+            Since I worked so long at my last employer, I didn't work on too
+            many large projects during those years. For that reason, I decided
+            to include a few projects that are over 10 years old and no longer
+            active. You can still somewhat view them on the Internet Archive.
+          </span>
+        </h2>
+        <!-- GO CYCLONES  -->
+        <div class="projects__row">
+          <div class="projects__row-img-content">
+            <img
+              class="projects__row-img"
+              src="./assets/jpeg/go-cyclones.jpg"
+              loading="lazy"
+              alt="Go Cyclones"
+            />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">goCyclones.com</h3>
+
+            <div class="projects__row-content-desc">
+              This site was built using PHP, MySQL, HTML, and CSS. I decided to
+              build it from scratch and it included a custom CMS.The extra space
+              in the header and sidebar was for advertising.
+            </div>
+            <a
+              href="https://web.archive.org/web/20090228065541/http://www.gocyclones.com/"
+              class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank"
+              >Archive Link</a
+            >
+          </div>
+        </div>
+        <!-- GO FLAT FEE REALTY  -->
+        <div class="projects__row">
+          <div class="projects__row-img-content">
+            <img
+              class="projects__row-img"
+              src="./assets/jpeg/goflatfeerealty.jpg"
+              loading="lazy"
+              alt="goflatfeerealty.com"
+            />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">GoFlatFeeRealty.com</h3>
+
+            <div class="projects__row-content-desc">
+              GoFlatFeeRealty.com was an e-commerce real estate site I built for
+              a client in Mississippi. I built it with a CMS called
+              SilverStripe. It used PHP for the back-end and MySQL for the
+              database. The front-end was built entirely from scratch and the
+              back-end CMS was heavily customized.
+            </div>
+            <a
+              href="https://web.archive.org/web/20190101071726/http:/www.hrm.goflatfeerealty.com/"
+              class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank"
+              >Archive Link</a
+            >
+          </div>
+        </div>
+
+        <!-- MID IOWA HOME FINDER  -->
+        <div class="projects__row">
+          <div class="projects__row-img-content">
+            <img
+              class="projects__row-img"
+              src="./assets/jpeg/midiowahomefinder.jpg"
+              loading="lazy"
+              alt="Mid-Iowa Home Finder"
+            />
+          </div>
+          <div class="projects__row-content">
+            <h3 class="projects__row-content-title">MidIowaHomeFinder.com</h3>
+
+            <div class="projects__row-content-desc">
+              MidIowaHomeFinder.com was a real estate site I built using PHP, MySQL, HTML, and CSS. I decided to
+              build it from scratch and it included a custom CMS.The extra space
+              in the sidebar was for advertising.
+            </div>
+            <a
+              href="https://web.archive.org/web/20100517072035/http://midiowahomefinder.com/"
+              class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank"
+              >Archive Link</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- END PROJECTS NO LONGER ACTIVE -->
 
     <section id="contact" class="contact sec-pad dynamicBg">
       <div class="main-container">
